[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-post-extractor-mcp"
version = "0.1.0"
description = "MCP server for extracting scripts and metadata from Douyin and XiaoHongShu posts"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "JNHFlow21", email = "JNHFlow21@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests",
    "ffmpeg-python",
    "tqdm",
    "dashscope",
    "fastapi",
    "uvicorn",
    "jinja2",
    "websockets",
]

[project.urls]
Homepage = "https://github.com/JNHFlow21/social-post-extractor-mcp"
Repository = "https://github.com/JNHFlow21/social-post-extractor-mcp"
Issues = "https://github.com/JNHFlow21/social-post-extractor-mcp/issues"

[project.scripts]
social-post-extractor-mcp = "social_post_extractor_mcp.server:main"
douyin-mcp-server = "douyin_mcp_server.server:main"
